Added New Title to the project as  "Booleans Project || Updated this using IntelliJ || Yes!!" at line no 6

--- a/07-RockPaperSciccors.html
+++ b/07-RockPaperSciccors.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        Booleans Project || Updated this using IntelliJ
+        Booleans Project || Updated this using IntelliJ || YES!!
     </title>
 
 </head>
