--- a/07-RockPaperSciccors.html
+++ b/07-RockPaperSciccors.html
@@ -10,6 +10,7 @@
 
 
 <body>
+    <p> Here we created a Local_main branch in local machine and merge our master into that Branch</p>
     <p> Rock Paper Scissors</p>
 
     <button onclick="
