Added New paragraph line  at line no 14 <P> Added new Feature Branch <p>

--- a/07-RockPaperSciccors.html
+++ b/07-RockPaperSciccors.html
@@ -11,6 +11,7 @@
 
 <body>
     <p> Here we created a Local_main branch in local machine and merge our master into that Branch</p>
+    <p> Added new Feature branch</p>
     <p> Rock Paper Scissors</p>
 
     <button onclick="
